backend/backend_error_utf8.txt
node : file:///C:/Users/Mirle
y/Downloads/CALCULO%20_APP%20
CONTABILIDAD/backend/src/serv
er.js:4
En línea: 1 Carácter: 1
+ node src/server.js > 
backend_error.log 2>&1
+ ~~~~~~~~~~~~~~~~~~~~~~~~~~~
~~~~~~~~~~~~~~~~
    + CategoryInfo           
   : NotSpecified: (file://  
  /C:/User...src/server.js   
 :4:String) [], RemoteExc    
eption
    + FullyQualifiedErrorId  
   : NativeCommandError
 
import { PrismaClient } from 
'@prisma/client'
         ^^^^^^^^^^^^
SyntaxError: Named export 
'PrismaClient' not found. 
The requested module 
'@prisma/client' is a 
CommonJS module, which may 
not support all 
module.exports as named 
exports.
CommonJS modules can always 
be imported via the default 
export, for example using:

import pkg from 
'@prisma/client';
const { PrismaClient } = pkg;

    at #asyncInstantiate (nod
e:internal/modules/esm/module
_job:319:21)
    at async ModuleJob.run (n
ode:internal/modules/esm/modu
le_job:422:5)
    at async onImport.tracePr
omise.__proto__ (node:interna
l/modules/esm/loader:661:26)
    at async asyncRunEntryPoi
ntWithESMLoader (node:interna
l/modules/run_main:101:5)

Node.js v24.14.0
